got menu button working on create and update character for now - will need true fix redo all style (also found out why we sometimes have extra space and sometimes don't on menus)

--- a/Capstone_Xavier/Content/css/style.css
+++ b/Capstone_Xavier/Content/css/style.css
@@ -66,6 +66,15 @@
     right: 5vw;
     display: inline-block;
 }
+.nav-side2 {
+    width: 33%;
+    margin: 0 auto;
+    margin-top: 7vw;
+    padding: 3px;
+    position: absolute;
+    right: 5vw;
+    display: inline-block;
+}
 
 .title {
     display: block;
